--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
   "prettier": "@shopify/prettier-config",
   "dependencies": {
     "@headlessui/react": "^1.7.2",
+    "@portabletext/react": "^2.0.1",
     "@remix-run/react": "1.12.0",
+    "@sanity/client": "^5.2.2",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/preview-kit": "^1.3.4",
     "@shopify/cli": "3.29.0",
     "@shopify/cli-hydrogen": "^4.0.6",
     "@shopify/hydrogen": "^2023.1.4",
@@ -25,6 +29,7 @@
     "cross-env": "^7.0.3",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
+    "groq": "^3.4.0",
     "isbot": "^3.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
